dhall/tests/import/failure/unit/cors/TwoHops.txt
Type error: error: error
 --> <current file>:1:1
  |
1 | https://test.dhall-lang.org/cors/TwoHopsFail.dhall
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ SanityCheck
  |
